 k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-v1-service
  namespace: catalog-v1
spec:
  selector:
    app: catalog-v1
  ports:
    - port: 80
      targetPort: 8080
